--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dmstr/yii2-adminlte-asset": "*",
         "hscstudio/yii2-mimin": "*",
         "mdmsoft/yii2-admin": "~2.0",
-        "kartik-v/yii2-field-range": "*"
+        "kartik-v/yii2-field-range": "*",
+        "kartik-v/yii2-widget-growl": "*"
         
     },
     "require-dev": {
