--- a/composer.json
+++ b/composer.json
@@ -34,15 +34,16 @@
         "kartik-v/yii2-export": "*",
         "kartik-v/yii2-grid": "@dev",
         "kartik-v/yii2-detail-view": "*",
-        "kartik-v/yii2-editable": "@dev"
+        "kartik-v/yii2-editable": "@dev",
+          "mdmsoft/yii2-admin": "~2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
         "yiisoft/yii2-gii": "~2.0.0",
         "yiisoft/yii2-faker": "~2.0.0",
         "codeception/base": "^2.2.3",
-        "codeception/verify": "~0.3.1",
-        "mdmsoft/yii2-admin": "~2.0"
+        "codeception/verify": "~0.3.1"
+      
         
     },
     "config": {
